--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="part1">
     <h1> Top 5 praias mais bonitas! </h1>
     </div>
-    <h3> Veja abaixo as praias com melhores vista para se aproveitar. </h3>
+    <h3> Veja abaixo as praias com melhores vistas para se aproveitar. </h3>
     <div class="part2"
     <h3> 1- Fernando de Noronha. </h3>
 </div>
